Fix motif alignment

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -17,16 +17,15 @@ main {
     background-image: url({{ site.baseurl }}/assets/img/side.png);
     background-repeat: repeat-y;
     background-size: contain;
-    height: 50vh;
     background-position: top left;
     width: 100%;
     flex-grow: 1;
-    display: block;
 }
 
 .bar__top {
     height: auto;
     transform: scaleY(-1);
+    font-size: 0;
 }
 
 .bar__top img {
@@ -58,12 +57,27 @@ article.content {
     justify-content: center;    
     font-size: 15pt;
     font-family: serif;
-    width: 95vw;
+    width: 80vw;
     padding-left: 5vw;
     padding-right: 5vw;
     background: #E4C4B9;
     font-family: "Montserrat";
+}
 
+@media screen and (max-width: 1000px) {
+    article.content {
+        width: 75vw;
+        padding-left: 5vw;
+        padding-right: 5vw;
+    }
+
+    .bar--left {
+        display: none;
+    }
+    
+    .bar--right {
+        width: 15vw;
+    }
 }
 
 
@@ -97,12 +111,4 @@ div.content__background {
     background-blend-mode: normal;
     filter: brightness(50%);
     z-index: -6;
-}
-
-@media screen and (max-width: 1000px) {
-    article.content {
-        width: 90vw;
-        padding-left: 5vw;
-        padding-right: 5vw;
-    }
 }
